--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Check the times of Formula 1 races by your local time, track time or any choosen timezone. Default is your localtime but if you save a timezone, that will be the default until you reset it. No bullshit, no ads, no trackers, only what's important." />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>F1 Races</title>
   </head>
   <body class="antialiased text-gray-900 bg-gray-200 font-sans">
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but F1 Races doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
