--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Check the times of Formula 1 races by your local time, track time or any choosen timezone. Default is your localtime but if you save a timezone, that will be the default until you reset it. No bullshit, no ads, no trackers, only what's important." />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta property="og:title" content="F1 Races">
+    <meta property="og:description" content="Check the times 🕑 of the races 🏎 by your local time, track time or any choosen timezone. 🏁 No bullshit, no ads, no trackers, only what's important. ">
+    <meta property="og:image" content="https://f1races.app/media.png">
+    <meta property="og:url" content="https://f1races.app/">
+    <meta property="og:site_name" content="F1 Races">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@flamisz">
+    <meta name="twitter:creator" content="@flamisz">
+    <meta name="twitter:title" content="F1 Races">
+    <meta name="twitter:description" content="Check the times 🕑 of the races 🏎 by your local time, track time or any choosen timezone. 🏁 No bullshit, no ads, no trackers, only what's important.">
+    <meta name="twitter:image:alt" content="F1 Races">
+    <meta name="twitter:image:src" content="https://f1races.app/media.png">
+    <meta name="twitter:url" content="https://f1races.app/">
     <title>F1 Races</title>
   </head>
   <body class="antialiased text-gray-900 bg-gray-200 font-sans">
