--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <meta name="twitter:image:alt" content="F1 Races">
     <meta name="twitter:image:src" content="https://f1races.app/media.png">
     <meta name="twitter:url" content="https://f1races.app/">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <title>F1 Races</title>
   </head>
   <body class="antialiased text-gray-900 bg-gray-200 font-sans">
